Initializing backend fastapi project structure

--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.3",
     "fastapi[standard]>=0.115.14",
+    "pydantic-settings>=2.10.1",
+    "sqlalchemy>=2.0.41",
 ]
