Initializing frontend package with main dashboard

--- a/packages/frontend/pyproject.toml
+++ b/packages/frontend/pyproject.toml
@@ -5,6 +5,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "streamlit>=1.46.1",
+    "streamlit-extras>=0.7.5",
 ]
 
 [tool.uv]
