--- a/packages/backend/pyproject.toml
+++ b/packages/backend/pyproject.toml
@@ -6,6 +6,8 @@ requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.16.3",
     "fastapi[standard]>=0.115.14",
+    "lxml>=6.0.0",
+    "mistralai>=1.10.0",
     "openpyxl>=3.1.5",
     "pandas>=2.3.0",
     "pydantic-settings>=2.10.1",
